[gd_scene load_steps=10 format=4 uid="uid://bafkj0rau6tq3"]

[ext_resource type="Texture2D" uid="uid://cpor5aojrkve5" path="res://assets/space_bg.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://u71eaxv67kxe" path="res://scenes/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://dq7dbgyeoyb1p" path="res://scenes/astronaut.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://0la3yplfj122" path="res://scenes/asteroid.tscn" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://bracuofm1if7y" path="res://scenes/scrap.tscn" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://bxuitjko4o6lu" path="res://scenes/HUD.tscn" id="6_tefeu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0wfyh"]
texture = ExtResource("1_o5qli")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_sugp2"]
sources/0 = SubResource("TileSetAtlasSource_0wfyh")

[sub_resource type="Curve2D" id="Curve2D_0wfyh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, -1, 0, 0, 0, 0, 959, -1, 0, 0, 0, 0, 959, 557, 0, 0, 0, 0, -2, 555, 0, 0, 0, 0, -1, -1)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_sugp2")
mob_scene = ExtResource("2_jyhfs")
scrap_scene = ExtResource("5_tbgi4")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2.5, 2.5)
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAABAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAEAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAEAAAAAAAsAAAABAAEAAAAAAAwAAAAAAAAAAAAAAA0AAAABAAAAAAABAAAAAAABAAAAAAABAAEAAAABAAEAAAABAAIAAAABAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAABAAEAAAABAAYAAAAAAAAAAAABAAcAAAABAAEAAAABAAgAAAABAAEAAAABAAkAAAABAAAAAAABAAoAAAABAAEAAAABAAsAAAAAAAEAAAABAAwAAAAAAAEAAAABAA0AAAABAAEAAAACAAAAAAAAAAEAAAACAAEAAAABAAAAAAACAAIAAAABAAEAAAACAAMAAAABAAEAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAEAAAACAAcAAAABAAAAAAACAAgAAAABAAEAAAACAAkAAAABAAEAAAACAAoAAAAAAAAAAAACAAsAAAABAAEAAAACAAwAAAAAAAAAAAACAA0AAAABAAEAAAADAAAAAAABAAEAAAADAAEAAAABAAAAAAADAAIAAAABAAEAAAADAAMAAAABAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAEAAAADAAYAAAABAAEAAAADAAcAAAAAAAAAAAADAAgAAAABAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAEAAAADAAsAAAABAAAAAAADAAwAAAABAAEAAAADAA0AAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAEAAAAEAAIAAAABAAAAAAAEAAMAAAAAAAEAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAAEAAgAAAABAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAABAAAAAAAEAAsAAAAAAAEAAAAEAAwAAAABAAAAAAAEAA0AAAABAAEAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAABAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAAAAAAAAAAFAAgAAAABAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAEAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAABAAAAAAAGAAAAAAABAAEAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAEAAAAGAAMAAAABAAAAAAAGAAQAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAABAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAABAAEAAAAGAAoAAAABAAEAAAAGAAsAAAAAAAAAAAAGAAwAAAABAAEAAAAGAA0AAAAAAAEAAAAHAAAAAAABAAAAAAAHAAEAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAAAAAAHAAUAAAABAAAAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAEAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAABAAEAAAAHAAsAAAAAAAAAAAAHAAwAAAABAAAAAAAHAA0AAAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAABAAAAAAAIAAIAAAABAAEAAAAIAAMAAAAAAAAAAAAIAAQAAAABAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAABAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAABAAEAAAAIAAsAAAABAAEAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAEAAAAJAAAAAAAAAAEAAAAJAAEAAAABAAAAAAAJAAIAAAABAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAABAAEAAAAJAAYAAAAAAAEAAAAJAAcAAAABAAEAAAAJAAgAAAABAAAAAAAJAAkAAAAAAAEAAAAJAAoAAAABAAEAAAAJAAsAAAABAAAAAAAJAAwAAAABAAAAAAAJAA0AAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAABAAAAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAEAAAAKAAgAAAABAAEAAAAKAAkAAAABAAEAAAAKAAoAAAAAAAEAAAAKAAsAAAABAAEAAAAKAAwAAAAAAAEAAAAKAA0AAAABAAEAAAALAAAAAAABAAEAAAALAAEAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAABAAEAAAALAAQAAAABAAAAAAALAAUAAAAAAAEAAAALAAYAAAABAAAAAAALAAcAAAAAAAEAAAALAAgAAAABAAAAAAALAAkAAAABAAEAAAALAAoAAAAAAAEAAAALAAsAAAAAAAAAAAALAAwAAAABAAAAAAALAA0AAAABAAEAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAEAAAAMAAMAAAABAAAAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAEAAAAMAAYAAAABAAEAAAAMAAcAAAAAAAAAAAAMAAgAAAABAAEAAAAMAAkAAAAAAAAAAAAMAAoAAAABAAEAAAAMAAsAAAAAAAEAAAAMAAwAAAAAAAEAAAAMAA0AAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAABAAAAAAANAAIAAAABAAEAAAANAAMAAAABAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAABAAEAAAANAAcAAAAAAAEAAAANAAgAAAAAAAAAAAANAAkAAAAAAAEAAAANAAoAAAAAAAAAAAANAAsAAAABAAEAAAANAAwAAAABAAEAAAANAA0AAAAAAAEAAAAOAAAAAAAAAAAAAAAOAAEAAAABAAAAAAAOAAIAAAABAAEAAAAOAAMAAAAAAAEAAAAOAAQAAAAAAAEAAAAOAAUAAAAAAAEAAAAOAAYAAAAAAAEAAAAOAAcAAAABAAAAAAAOAAgAAAABAAEAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAABAAEAAAAOAAwAAAABAAEAAAAOAA0AAAAAAAEAAAAPAAAAAAAAAAEAAAAPAAEAAAAAAAEAAAAPAAIAAAAAAAAAAAAPAAMAAAABAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAEAAAAPAAYAAAABAAAAAAAPAAcAAAABAAAAAAAPAAgAAAABAAAAAAAPAAkAAAABAAAAAAAPAAoAAAAAAAEAAAAPAAsAAAABAAEAAAAPAAwAAAAAAAAAAAAPAA0AAAABAAEAAAAQAAAAAAAAAAAAAAAQAAEAAAABAAEAAAAQAAIAAAABAAEAAAAQAAMAAAABAAEAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAEAAAAQAAYAAAABAAAAAAAQAAcAAAABAAAAAAAQAAgAAAABAAAAAAAQAAkAAAABAAAAAAAQAAoAAAAAAAEAAAAQAAsAAAABAAAAAAAQAAwAAAAAAAAAAAAQAA0AAAABAAEAAAARAAAAAAABAAEAAAARAAEAAAABAAEAAAARAAIAAAABAAEAAAARAAMAAAAAAAAAAAARAAQAAAABAAAAAAARAAUAAAAAAAEAAAARAAYAAAAAAAAAAAARAAcAAAABAAEAAAARAAgAAAABAAAAAAARAAkAAAABAAAAAAARAAoAAAABAAEAAAARAAsAAAAAAAAAAAARAAwAAAAAAAEAAAARAA0AAAABAAAAAAASAAAAAAABAAEAAAASAAEAAAAAAAEAAAASAAIAAAAAAAEAAAASAAMAAAABAAAAAAASAAQAAAABAAEAAAASAAUAAAABAAEAAAASAAYAAAAAAAAAAAASAAcAAAABAAEAAAASAAgAAAAAAAEAAAASAAkAAAAAAAEAAAASAAoAAAABAAAAAAASAAsAAAABAAAAAAASAAwAAAABAAAAAAASAA0AAAABAAEAAAATAAAAAAAAAAEAAAATAAEAAAABAAEAAAATAAIAAAAAAAAAAAATAAMAAAABAAAAAAATAAQAAAAAAAEAAAATAAUAAAABAAAAAAATAAYAAAABAAEAAAATAAcAAAABAAEAAAATAAgAAAAAAAEAAAATAAkAAAABAAAAAAATAAoAAAAAAAEAAAATAAsAAAAAAAAAAAATAAwAAAAAAAEAAAATAA0AAAABAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAEAAAAUAAIAAAABAAEAAAAUAAMAAAABAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAEAAAAUAAYAAAAAAAEAAAAUAAcAAAABAAEAAAAUAAgAAAAAAAEAAAAUAAkAAAABAAEAAAAUAAoAAAABAAEAAAAUAAsAAAABAAAAAAAUAAwAAAABAAAAAAAUAA0AAAABAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAABAAEAAAAVAAIAAAAAAAEAAAAVAAMAAAABAAEAAAAVAAQAAAABAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAABAAAAAAAVAAgAAAAAAAEAAAAVAAkAAAABAAAAAAAVAAoAAAABAAAAAAAVAAsAAAAAAAEAAAAVAAwAAAAAAAAAAAAVAA0AAAABAAEAAAAWAAAAAAABAAEAAAAWAAEAAAAAAAEAAAAWAAIAAAABAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAABAAEAAAAWAAUAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAAcAAAAAAAEAAAAWAAgAAAAAAAEAAAAWAAkAAAABAAAAAAAWAAoAAAAAAAEAAAAWAAsAAAABAAEAAAAWAAwAAAAAAAAAAAAWAA0AAAABAAAAAAAXAAAAAAAAAAEAAAAXAAEAAAABAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAABAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAABAAEAAAAXAAcAAAABAAEAAAAXAAgAAAAAAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAABAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAABAAAAAAAXAA0AAAAAAAEAAAA=")
tile_set = SubResource("TileSet_sugp2")

[node name="astronaut" parent="." instance=ExtResource("2_0wfyh")]
position = Vector2(-64, 76)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScrapTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(480, 270)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0wfyh")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-1, -1)

[node name="HUD" parent="." instance=ExtResource("6_tefeu")]

[connection signal="collect" from="astronaut" to="." method="collect_scrap"]
[connection signal="hit" from="astronaut" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScrapTimer" to="." method="_on_scrap_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
